Bug 333833 Image buttons in Firefox Pref dialog can't be grabbed by GOK r=aaronleventhal sr=neil